<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainLabel"
        android:layout_width="257dp"
        android:layout_height="38dp"
        android:onClick="clickMainView"
        android:text="@string/text_main"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/button"
        android:layout_width="158dp"
        android:layout_height="44dp"
        android:text="@string/button_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.165" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="166dp"
        android:layout_height="43dp"
        android:text="@string/checkBox_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093" />

    <TableLayout
        android:layout_width="353dp"
        android:layout_height="302dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.643">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/table_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/table_label"
                android:textSize="22sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/textViewFirstRow5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="22"
                android:text="@string/first_row"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/first_row2"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/textViewFirstRow2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/second_row"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/textViewFirstRow3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/third_row"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/textViewFirstRow4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fourth_row"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>